--- a/index.html
+++ b/index.html
@@ -42,26 +42,28 @@
         </div>
       </div>
 
-      <div class="testimonial__content">
-        <blockquote class="testimonial__text">
-          I've been interested in coding for a while but never taken the jump,
-          until now. I couldn't recommend this course enough. I'm now in the job
-          of my dreams and so excited about the future.
-        </blockquote>
-        <div class="testimonial__author">
-          <h2 class="testimonial__name">Tanya Sinclair</h2>
-          <p class="testimonial__job">UX Engineer</p>
+      <div class="testimonial__content-container">
+        <div class="testimonial__content">
+          <blockquote class="testimonial__text">
+            I've been interested in coding for a while but never taken the jump,
+            until now. I couldn't recommend this course enough. I'm now in the
+            job of my dreams and so excited about the future.
+          </blockquote>
+          <div class="testimonial__author">
+            <h2 class="testimonial__name">Tanya Sinclair</h2>
+            <p class="testimonial__job">UX Engineer</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial__content testimonial__content--active">
-        <blockquote class="testimonial__text">
-          If you want to lay the best foundation possible I'd recommend taking
-          this course. The depth the instructors go into is incredible. I now
-          feel so confident about starting up as a professional developer.
-        </blockquote>
-        <div class="testimonial__author">
-          <h2 class="testimonial__name">John Tarkpor</h2>
-          <p class="testimonial__job">Junior Front-end Developer</p>
+        <div class="testimonial__content testimonial__content--active">
+          <blockquote class="testimonial__text">
+            If you want to lay the best foundation possible I'd recommend taking
+            this course. The depth the instructors go into is incredible. I now
+            feel so confident about starting up as a professional developer.
+          </blockquote>
+          <div class="testimonial__author">
+            <h2 class="testimonial__name">John Tarkpor</h2>
+            <p class="testimonial__job">Junior Front-end Developer</p>
+          </div>
         </div>
       </div>
     </div>
