--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+    <script defer src="js/script.js"></script>
   </head>
   <body>
     <div class="testimonial">
